@@ -13,9 +13,9 @@
 static KMMsgStatus sStatusList[NUM_STATUSLIST+1] = 
 {
   KMMsgStatusDeleted, KMMsgStatusNew, 
-  KMMsgStatusUnread, KMMsgStatusOld,
-  KMMsgStatusReplied, KMMsgStatusSent,
-  KMMsgStatusQueued,
+  KMMsgStatusUnread,  KMMsgStatusOld,
+  KMMsgStatusRead,    KMMsgStatusReplied, 
+  KMMsgStatusSent,    KMMsgStatusQueued,
   KMMsgStatusUnknown /* "Unknown" must be at the *end* of the list */
 };
 
@@ -99,7 +99,7 @@ void KMMsgBase::setStatus(const char* aStatusStr, const char* aXStatusStr)
     if ((aStatusStr[0]=='R' && aStatusStr[1]=='O') ||
 	(aStatusStr[0]=='O' && aStatusStr[1]=='R'))
 	mStatus=KMMsgStatusOld;
-    else if (aStatusStr[0]=='R') mStatus=KMMsgStatusUnread;
+    else if (aStatusStr[0]=='R') mStatus=KMMsgStatusRead;
     else if (aStatusStr[0]=='D') mStatus=KMMsgStatusDeleted;
     else mStatus=KMMsgStatusNew;
   }
